--- a/notebooks/ajmc.ipynb
+++ b/notebooks/ajmc.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
+    "# Functions"
    ]
   },
   {
@@ -33,6 +33,13 @@
    "outputs": [],
    "source": [
     "def collect_entities(documents: List[HipeDocument]) -> Dict[str, List[HipeEntity]]:\n",
+    "    \"\"\"Simple function to gather all entities from documents in a dataset, divided by type.\n",
+    "\n",
+    "    :param documents: Input documents in HIPE format\n",
+    "    :type documents: List[HipeDocument]\n",
+    "    :return: A list of `HipeEntity` objects\n",
+    "    :rtype: Dict[str, List[HipeEntity]]\n",
+    "    \"\"\"\n",
     "    all_entities = {}\n",
     "\n",
     "    for doc in ajmc_sample_en_docs:\n",
@@ -51,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## English sample"
+    "# English sample"
    ]
   },
   {
@@ -76,12 +83,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parse the TSV into a list of `HipeDocument` objects\n",
     "ajmc_sample_en_docs = parse_tsv(file_path=ajmc_sample_en_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +98,13 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# number of documents in the ajmc EN sample file\n",
     "len(ajmc_sample_en_docs)"
    ]
   },
@@ -172,11 +181,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now have a look at a bunch of random entities for each entity type in this dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# first, we need to gather all entities from documents in the dataset\n",
     "all_entities = collect_entities(ajmc_sample_en_docs)"
    ]
   },
@@ -232,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## German sample"
+    "# German sample"
    ]
   },
   {
@@ -332,11 +349,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now have a look at a bunch of random entities for each entity type in this dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# first, we need to gather all entities from documents in the dataset\n",
     "all_entities = collect_entities(ajmc_sample_de_docs)"
    ]
   },
