moving to one notebook with all stats instead of one nb per dataset; update README accordingly

--- a/hipe2022-datasets-stats.ipynb
+++ b/hipe2022-datasets-stats.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0c5938eb",
    "metadata": {},
    "source": [
     "# Imports"
@@ -9,10 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
+   "id": "84f5b8ff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import random\n",
     "from typing import List, Dict\n",
     "from hipe_commons.helpers.tsv import parse_tsv, ENTITY_TYPES, HipeDocument, HipeEntity\n",
@@ -21,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b041768",
    "metadata": {},
    "source": [
     "# Functions"
@@ -28,7 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
+   "id": "a9687518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,30 +61,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a79f912",
    "metadata": {},
    "source": [
-    "# English sample"
+    "# HIPE 2022 Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "78b29c82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HIPE2022_data_path = \"./data/v1.0/\""
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8af7af62",
    "metadata": {},
    "source": [
-    "## Read TSV"
+    "## ajmc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dad9df87",
+   "metadata": {},
+   "source": [
+    "### Paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "id": "8d5254da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ajmc_sample_en_path = \"../data/ajmc/v0.1/en/HIPE-2022-ajmc-v0.1-sample-en.tsv\""
+    "ajmc_sample_en_path = os.path.join(HIPE2022_data_path, \"ajmc/en/HIPE-2022-v1.0-ajmc-sample-en.tsv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "id": "c3444079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajmc_sample_de_path = os.path.join(HIPE2022_data_path, \"ajmc/de/HIPE-2022-v1.0-ajmc-sample-de.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dea822df",
+   "metadata": {},
+   "source": [
+    "### EN sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0ae73724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,35 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# number of documents in the ajmc EN sample file\n",
-    "len(ajmc_sample_en_docs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basic stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
+   "id": "c9a2928b",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Path of the TSV file: ../data/ajmc/v0.1/en/HIPE-2022-ajmc-v0.1-sample-en.tsv \n",
+      "Path of the TSV file: ./data/v1.0/ajmc/en/HIPE-2022-v1.0-ajmc-sample-en.tsv \n",
       "Number of documents: 5 \n",
       "Number of entities: {'coarse_lit': 153, 'fine_lit': 153} \n",
       "Number of tokens: 2187 \n",
@@ -170,123 +188,33 @@
     }
    ],
    "source": [
+    "# print some basic stats for the TSV dataset \n",
     "print(describe_dataset(documents=ajmc_sample_en_docs))"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "459ec156",
    "metadata": {},
    "source": [
-    "## Inspect sample entities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now have a look at a bunch of random entities for each entity type in this dataset."
+    "### DE sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
+   "id": "c5ecbe6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first, we need to gather all entities from documents in the dataset\n",
-    "all_entities = collect_entities(ajmc_sample_en_docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[scope] Append.  (None),\n",
-       " [loc] Salamis (Q202422),\n",
-       " [scope] 411  (None),\n",
-       " [scope] § 9.p. 12, 2 (None),\n",
-       " [scope] 27 (None)]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.sample(all_entities['coarse_lit'], 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[scope] 27 (None),\n",
-       " [work.primlit] “42.  (Q241077),\n",
-       " [pers.other] Photius (Q243187),\n",
-       " [work.primlit] Miad  (Q8275),\n",
-       " [work.primlit] Trach.  (Q945342)]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.sample(all_entities['fine_lit'], 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# German sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read TSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ajmc_sample_de_path = \"../data/ajmc/v0.1/de/HIPE-2022-ajmc-v0.1-sample-de.tsv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# parse the TSV into a list of `HipeDocument` objects\n",
     "ajmc_sample_de_docs = parse_tsv(file_path=ajmc_sample_de_path)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basic stats"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
+   "id": "c631a431",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +222,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Path of the TSV file: ../data/ajmc/v0.1/de/HIPE-2022-ajmc-v0.1-sample-de.tsv \n",
+      "Path of the TSV file: ./data/v1.0/ajmc/de/HIPE-2022-v1.0-ajmc-sample-de.tsv \n",
       "Number of documents: 8 \n",
       "Number of entities: {'coarse_lit': 202, 'fine_lit': 202, 'nested': 7} \n",
       "Number of tokens: 2584 \n",
@@ -345,81 +273,54 @@
     }
    ],
    "source": [
+    "# print some basic stats for the TSV dataset \n",
     "print(describe_dataset(documents=ajmc_sample_de_docs))"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b0a7aad4",
    "metadata": {},
    "source": [
-    "Let's now have a look at a bunch of random entities for each entity type in this dataset."
+    "## hipe2020"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
+   "id": "3f7ef9e3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# first, we need to gather all entities from documents in the dataset\n",
-    "all_entities = collect_entities(ajmc_sample_de_docs)"
+    "## letemps"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
+   "id": "e7875d7c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[scope] 3. 59) (None),\n",
-       " [scope] 1. 15 § 13 (None),\n",
-       " [scope] 2. 557 f.: (None),\n",
-       " [work] Pk.  (Q1415903),\n",
-       " [pers] Meineke  (Q77628)]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "random.sample(all_entities['coarse_lit'], 5)"
+    "## topres19th"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
+   "id": "05344548",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[pers.author] Aesch.  (Q40939),\n",
-       " [pers.author] Sophocles  (Q11950683),\n",
-       " [pers.author] Sophocles  (Q11950683),\n",
-       " [scope] p. 221) (None),\n",
-       " [work.primlit] Little Iliad (Q2087365)]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "random.sample(all_entities['fine_lit'], 5)"
+    "## newseye"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b5096d5",
+   "metadata": {},
+   "source": [
+    "## sonar"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "3f71d33a9884d3588e07aec0372ed71657c1daee96af90553802fa17e32b8b98"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit ('hipe_commons-test': pyenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -433,10 +334,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.0"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
