--- a/hipe2022-datasets-stats.ipynb
+++ b/hipe2022-datasets-stats.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "84f5b8ff",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a9687518",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "78b29c82",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "8d5254da",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "c3444079",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "0ae73724",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "c9a2928b",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "c5ecbe6f",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "c631a431",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "094c5c69",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "75b76afe",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "d0da09ac",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "74076a21",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "43698776",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "c5ecbe6f",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "c631a431",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "id": "b56444c5",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "d12057aa",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "id": "273054a9",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "0f42ded3",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "45ea17b2",
    "metadata": {},
    "outputs": [],
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 40,
    "id": "b01ae55b",
    "metadata": {},
    "outputs": [],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 41,
    "id": "45ea17b2",
    "metadata": {},
    "outputs": [],
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 42,
    "id": "b01ae55b",
    "metadata": {},
    "outputs": [],
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "id": "45ea17b2",
    "metadata": {},
    "outputs": [],
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 44,
    "id": "b01ae55b",
    "metadata": {},
    "outputs": [],
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 45,
    "id": "45ea17b2",
    "metadata": {},
    "outputs": [],
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 46,
    "id": "b01ae55b",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1621,7 +1621,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/fr/HIPE-2022-v1.0-newseye-dev-fr.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 35 \n",
       "Number of entities: {'coarse_lit': 752, 'fine_lit': 3, 'nested': 32} \n",
       "Number of tokens: 21727 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -1673,7 +1673,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 49,
+   "id": "d18ba24d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./data/v1.0/newseye/fr/HIPE-2022-v1.0-newseye-train-fr.tsv'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newseye_train_fr_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1684,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1715,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/fr/HIPE-2022-v1.0-newseye-train-fr.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 35 \n",
       "Number of entities: {'coarse_lit': 10423, 'fine_lit': 99, 'nested': 522} \n",
       "Number of tokens: 255165 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -1754,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 52,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1765,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 53,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1796,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/de/HIPE-2022-v1.0-newseye-dev-de.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 12 \n",
       "Number of entities: {'coarse_lit': 539, 'fine_lit': 5, 'nested': 29} \n",
       "Number of tokens: 40061 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -1825,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 54,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1836,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 55,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1867,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/de/HIPE-2022-v1.0-newseye-train-de.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 11 \n",
       "Number of entities: {'coarse_lit': 11397, 'fine_lit': 21, 'nested': 1134} \n",
       "Number of tokens: 448243 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -1906,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 56,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 57,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1927,7 +1948,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/fi/HIPE-2022-v1.0-newseye-dev-fi.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 24 \n",
       "Number of entities: {'coarse_lit': 223, 'fine_lit': 1, 'nested': 26} \n",
       "Number of tokens: 6350 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -1977,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 58,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -1988,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 59,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -1998,7 +2019,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/fi/HIPE-2022-v1.0-newseye-train-fi.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 24 \n",
       "Number of entities: {'coarse_lit': 2146, 'fine_lit': 15, 'nested': 225} \n",
       "Number of tokens: 48222 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -2058,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 60,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -2069,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 61,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -2079,7 +2100,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/sv/HIPE-2022-v1.0-newseye-dev-sv.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 21 \n",
       "Number of entities: {'coarse_lit': 266, 'fine_lit': 1, 'nested': 9} \n",
       "Number of tokens: 6906 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -2129,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 62,
    "id": "34dd4006",
    "metadata": {},
    "outputs": [],
@@ -2140,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 63,
    "id": "a5bbc258",
    "metadata": {},
    "outputs": [
@@ -2150,7 +2171,7 @@
      "text": [
       "\n",
       "Path of the TSV file: ./data/v1.0/newseye/sv/HIPE-2022-v1.0-newseye-train-sv.tsv \n",
-      "Number of documents: 1 \n",
+      "Number of documents: 21 \n",
       "Number of entities: {'coarse_lit': 2141, 'fine_lit': 16, 'nested': 126} \n",
       "Number of tokens: 56306 \n",
       "Entity breakdown by type: coarse_lit\n",
@@ -2212,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "id": "1f30273b",
    "metadata": {},
    "outputs": [],
@@ -2230,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 66,
    "id": "b5418497",
    "metadata": {},
    "outputs": [
