fixed path of topres19th dataset in stats notebook

--- a/hipe2022-datasets-stats.ipynb
+++ b/hipe2022-datasets-stats.ipynb
@@ -1365,7 +1365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topRes19th_dev_en_path = os.path.join(HIPE2022_data_path, \"topRes19th/en/HIPE-2022-v1.0-topRes19th-dev-en.tsv\")"
+    "topRes19th_dev_en_path = os.path.join(HIPE2022_data_path, \"topres19th/en/HIPE-2022-v1.0-topres19th-dev-en.tsv\")"
    ]
   },
   {
@@ -1375,7 +1375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topRes19th_train_en_path = os.path.join(HIPE2022_data_path, \"topRes19th/en/HIPE-2022-v1.0-topRes19th-train-en.tsv\")"
+    "topRes19th_train_en_path = os.path.join(HIPE2022_data_path, \"topres19th/en/HIPE-2022-v1.0-topres19th-train-en.tsv\")"
    ]
   },
   {
@@ -1408,7 +1408,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Path of the TSV file: ./data/v1.0/topRes19th/en/HIPE-2022-v1.0-topRes19th-dev-en.tsv \n",
+      "Path of the TSV file: ./data/v1.0/topres19th/en/HIPE-2022-v1.0-topres19th-dev-en.tsv \n",
       "Number of documents: 34 \n",
       "Number of entities: {'coarse_lit': 237} \n",
       "Number of tokens: 11917 \n",
@@ -1461,7 +1461,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Path of the TSV file: ./data/v1.0/topRes19th/en/HIPE-2022-v1.0-topRes19th-train-en.tsv \n",
+      "Path of the TSV file: ./data/v1.0/topres19th/en/HIPE-2022-v1.0-topres19th-train-en.tsv \n",
       "Number of documents: 309 \n",
       "Number of entities: {'coarse_lit': 3182} \n",
       "Number of tokens: 123983 \n",
