--- a/hipe2022-datasets-stats.ipynb
+++ b/hipe2022-datasets-stats.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "39ac9869",
    "metadata": {},
    "outputs": [],
@@ -76,14 +76,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bed61def",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "0f6a13c1",
    "metadata": {},
    "outputs": [],
@@ -112,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "f1d7980b",
    "metadata": {},
    "outputs": [],
@@ -148,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d7d48341",
    "metadata": {},
    "outputs": [],
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "d4d2e96e",
    "metadata": {},
    "outputs": [
@@ -170,8 +164,8 @@
       "\n",
       "Path of the TSV file: ./data/v2.0/ajmc/en/HIPE-2022-v2.0-ajmc-dev-en.tsv \n",
       "Number of documents: 14 \n",
-      "Number of entities: {'coarse_lit': 411, 'fine_lit': 411, 'nested': 1} \n",
-      "Number of tokens: 6391 \n",
+      "Number of entities: {'coarse_lit': 413, 'fine_lit': 413} \n",
+      "Number of tokens: 6507 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+-------+---------+\n",
       "|       |   count |\n",
@@ -182,7 +176,7 @@
       "+-------+---------+\n",
       "| pers  |     130 |\n",
       "+-------+---------+\n",
-      "| scope |     158 |\n",
+      "| scope |     160 |\n",
       "+-------+---------+\n",
       "| work  |     115 |\n",
       "+-------+---------+\n",
@@ -202,7 +196,7 @@
       "+--------------+---------+\n",
       "| pers.other   |       2 |\n",
       "+--------------+---------+\n",
-      "| scope        |     158 |\n",
+      "| scope        |     160 |\n",
       "+--------------+---------+\n",
       "| work.fragm   |       1 |\n",
       "+--------------+---------+\n",
@@ -210,12 +204,6 @@
       "+--------------+---------+\n",
       "| work.seclit  |      13 |\n",
       "+--------------+---------+\n",
-      "nested\n",
-      "+-------+---------+\n",
-      "|       |   count |\n",
-      "+=======+=========+\n",
-      "| scope |       1 |\n",
-      "+-------+---------+\n",
       "\n"
      ]
     }
@@ -235,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "9c59de36",
    "metadata": {},
    "outputs": [],
@@ -246,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "27ed577b",
    "metadata": {},
    "outputs": [
@@ -257,8 +245,8 @@
       "\n",
       "Path of the TSV file: ./data/v2.0/ajmc/en/HIPE-2022-v2.0-ajmc-train-en.tsv \n",
       "Number of documents: 60 \n",
-      "Number of entities: {'coarse_lit': 1814, 'fine_lit': 1814, 'nested': 8} \n",
-      "Number of tokens: 30132 \n",
+      "Number of entities: {'coarse_lit': 1815, 'fine_lit': 1815, 'nested': 4} \n",
+      "Number of tokens: 30936 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+--------+---------+\n",
       "|        |   count |\n",
@@ -269,11 +257,11 @@
       "+--------+---------+\n",
       "| object |       3 |\n",
       "+--------+---------+\n",
-      "| pers   |     624 |\n",
+      "| pers   |     622 |\n",
       "+--------+---------+\n",
-      "| scope  |     671 |\n",
+      "| scope  |     676 |\n",
       "+--------+---------+\n",
-      "| work   |     467 |\n",
+      "| work   |     465 |\n",
       "+--------+---------+\n",
       "fine_lit\n",
       "+----------------+---------+\n",
@@ -285,7 +273,7 @@
       "+----------------+---------+\n",
       "| object.manuscr |       3 |\n",
       "+----------------+---------+\n",
-      "| pers.author    |     241 |\n",
+      "| pers.author    |     239 |\n",
       "+----------------+---------+\n",
       "| pers.editor    |      28 |\n",
       "+----------------+---------+\n",
@@ -293,7 +281,7 @@
       "+----------------+---------+\n",
       "| pers.other     |      22 |\n",
       "+----------------+---------+\n",
-      "| scope          |     671 |\n",
+      "| scope          |     676 |\n",
       "+----------------+---------+\n",
       "| work.fragm     |       2 |\n",
       "+----------------+---------+\n",
@@ -301,7 +289,7 @@
       "+----------------+---------+\n",
       "| work.other     |       3 |\n",
       "+----------------+---------+\n",
-      "| work.primlit   |     413 |\n",
+      "| work.primlit   |     411 |\n",
       "+----------------+---------+\n",
       "| work.seclit    |      48 |\n",
       "+----------------+---------+\n",
@@ -313,7 +301,7 @@
       "+--------------+---------+\n",
       "| pers.myth    |       1 |\n",
       "+--------------+---------+\n",
-      "| scope        |       5 |\n",
+      "| scope        |       1 |\n",
       "+--------------+---------+\n",
       "| work.primlit |       1 |\n",
       "+--------------+---------+\n",
@@ -344,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "e10a9e0b",
    "metadata": {},
    "outputs": [],
@@ -355,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "7b3fd754",
    "metadata": {},
    "outputs": [
@@ -367,7 +355,7 @@
       "Path of the TSV file: ./data/v2.0/ajmc/de/HIPE-2022-v2.0-ajmc-dev-de.tsv \n",
       "Number of documents: 14 \n",
       "Number of entities: {'coarse_lit': 403, 'fine_lit': 403, 'nested': 2} \n",
-      "Number of tokens: 4701 \n",
+      "Number of tokens: 4702 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+--------+---------+\n",
       "|        |   count |\n",
@@ -429,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "8da40406",
    "metadata": {},
    "outputs": [],
@@ -440,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "af8ae6f5",
    "metadata": {},
    "outputs": [
@@ -451,8 +439,8 @@
       "\n",
       "Path of the TSV file: ./data/v2.0/ajmc/de/HIPE-2022-v2.0-ajmc-train-de.tsv \n",
       "Number of documents: 76 \n",
-      "Number of entities: {'coarse_lit': 1749, 'fine_lit': 1749, 'nested': 15} \n",
-      "Number of tokens: 22969 \n",
+      "Number of entities: {'coarse_lit': 1738, 'fine_lit': 1738, 'nested': 11} \n",
+      "Number of tokens: 22696 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+--------+---------+\n",
       "|        |   count |\n",
@@ -463,11 +451,11 @@
       "+--------+---------+\n",
       "| object |       6 |\n",
       "+--------+---------+\n",
-      "| pers   |     625 |\n",
+      "| pers   |     619 |\n",
       "+--------+---------+\n",
-      "| scope  |     760 |\n",
+      "| scope  |     758 |\n",
       "+--------+---------+\n",
-      "| work   |     325 |\n",
+      "| work   |     322 |\n",
       "+--------+---------+\n",
       "fine_lit\n",
       "+----------------+---------+\n",
@@ -479,21 +467,21 @@
       "+----------------+---------+\n",
       "| object.manuscr |       6 |\n",
       "+----------------+---------+\n",
-      "| pers.author    |     355 |\n",
+      "| pers.author    |     352 |\n",
       "+----------------+---------+\n",
       "| pers.editor    |      16 |\n",
       "+----------------+---------+\n",
-      "| pers.myth      |     238 |\n",
+      "| pers.myth      |     235 |\n",
       "+----------------+---------+\n",
       "| pers.other     |      16 |\n",
       "+----------------+---------+\n",
-      "| scope          |     760 |\n",
+      "| scope          |     758 |\n",
       "+----------------+---------+\n",
       "| work.fragm     |       2 |\n",
       "+----------------+---------+\n",
-      "| work.primlit   |     315 |\n",
+      "| work.primlit   |     313 |\n",
       "+----------------+---------+\n",
-      "| work.seclit    |       8 |\n",
+      "| work.seclit    |       7 |\n",
       "+----------------+---------+\n",
       "nested\n",
       "+--------------+---------+\n",
@@ -505,7 +493,7 @@
       "+--------------+---------+\n",
       "| pers.editor  |       1 |\n",
       "+--------------+---------+\n",
-      "| scope        |       7 |\n",
+      "| scope        |       3 |\n",
       "+--------------+---------+\n",
       "| work.primlit |       1 |\n",
       "+--------------+---------+\n",
@@ -538,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "cc683514",
    "metadata": {},
    "outputs": [],
@@ -549,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "0644243e",
    "metadata": {},
    "outputs": [
@@ -560,17 +548,17 @@
       "\n",
       "Path of the TSV file: ./data/v2.0/ajmc/fr/HIPE-2022-v2.0-ajmc-dev-fr.tsv \n",
       "Number of documents: 17 \n",
-      "Number of entities: {'coarse_lit': 393, 'fine_lit': 393, 'nested': 1} \n",
-      "Number of tokens: 5077 \n",
+      "Number of entities: {'coarse_lit': 390, 'fine_lit': 390} \n",
+      "Number of tokens: 5425 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+-------+---------+\n",
       "|       |   count |\n",
       "+=======+=========+\n",
       "| pers  |     123 |\n",
       "+-------+---------+\n",
-      "| scope |     170 |\n",
+      "| scope |     168 |\n",
       "+-------+---------+\n",
-      "| work  |     100 |\n",
+      "| work  |      99 |\n",
       "+-------+---------+\n",
       "fine_lit\n",
       "+--------------+---------+\n",
@@ -584,16 +572,10 @@
       "+--------------+---------+\n",
       "| pers.other   |      35 |\n",
       "+--------------+---------+\n",
-      "| scope        |     170 |\n",
+      "| scope        |     168 |\n",
       "+--------------+---------+\n",
-      "| work.primlit |     100 |\n",
+      "| work.primlit |      99 |\n",
       "+--------------+---------+\n",
-      "nested\n",
-      "+-------+---------+\n",
-      "|       |   count |\n",
-      "+=======+=========+\n",
-      "| scope |       1 |\n",
-      "+-------+---------+\n",
       "\n"
      ]
     }
@@ -613,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "de15545d",
    "metadata": {},
    "outputs": [],
@@ -624,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "786a76a5",
    "metadata": {},
    "outputs": [
@@ -635,23 +617,23 @@
       "\n",
       "Path of the TSV file: ./data/v2.0/ajmc/fr/HIPE-2022-v2.0-ajmc-train-fr.tsv \n",
       "Number of documents: 72 \n",
-      "Number of entities: {'coarse_lit': 1566, 'fine_lit': 1566, 'nested': 13} \n",
-      "Number of tokens: 22727 \n",
+      "Number of entities: {'coarse_lit': 1621, 'fine_lit': 1621, 'nested': 8} \n",
+      "Number of tokens: 24669 \n",
       "Entity breakdown by type: coarse_lit\n",
       "+--------+---------+\n",
       "|        |   count |\n",
       "+========+=========+\n",
       "| date   |       2 |\n",
       "+--------+---------+\n",
-      "| loc    |      14 |\n",
+      "| loc    |      15 |\n",
       "+--------+---------+\n",
       "| object |      10 |\n",
       "+--------+---------+\n",
-      "| pers   |     557 |\n",
+      "| pers   |     576 |\n",
       "+--------+---------+\n",
-      "| scope  |     616 |\n",
+      "| scope  |     639 |\n",
       "+--------+---------+\n",
-      "| work   |     367 |\n",
+      "| work   |     379 |\n",
       "+--------+---------+\n",
       "fine_lit\n",
       "+----------------+---------+\n",
@@ -659,37 +641,37 @@
       "+================+=========+\n",
       "| date           |       2 |\n",
       "+----------------+---------+\n",
-      "| loc            |      14 |\n",
+      "| loc            |      15 |\n",
       "+----------------+---------+\n",
       "| object.manuscr |      10 |\n",
       "+----------------+---------+\n",
-      "| pers.author    |     282 |\n",
+      "| pers.author    |     293 |\n",
       "+----------------+---------+\n",
       "| pers.editor    |      57 |\n",
       "+----------------+---------+\n",
-      "| pers.myth      |      77 |\n",
+      "| pers.myth      |      83 |\n",
       "+----------------+---------+\n",
-      "| pers.other     |     141 |\n",
+      "| pers.other     |     143 |\n",
       "+----------------+---------+\n",
-      "| scope          |     616 |\n",
+      "| scope          |     639 |\n",
       "+----------------+---------+\n",
       "| work.fragm     |       4 |\n",
       "+----------------+---------+\n",
-      "| work.primlit   |     359 |\n",
+      "| work.primlit   |     369 |\n",
       "+----------------+---------+\n",
-      "| work.seclit    |       4 |\n",
+      "| work.seclit    |       6 |\n",
       "+----------------+---------+\n",
       "nested\n",
       "+--------------+---------+\n",
       "|              |   count |\n",
       "+==============+=========+\n",
-      "| pers.author  |       2 |\n",
+      "| pers.author  |       1 |\n",
       "+--------------+---------+\n",
       "| pers.editor  |       1 |\n",
       "+--------------+---------+\n",
-      "| pers.other   |       2 |\n",
+      "| pers.other   |       1 |\n",
       "+--------------+---------+\n",
-      "| scope        |       6 |\n",
+      "| scope        |       3 |\n",
       "+--------------+---------+\n",
       "| work.primlit |       2 |\n",
       "+--------------+---------+\n",
@@ -2569,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "id": "263a7947",
    "metadata": {},
    "outputs": [],
